test/testcase/version_1/fail/track-link-rel-missing.xspf
<?xml version="1.0" encoding="UTF-8"?>
<playlist version="1" xmlns="http://xspf.org/ns/0/">
	<trackList>
		<track>
			<link xml:base="foo">test</link>
		</track>
	</trackList>
</playlist>

